# bristol_gate

./: .cursorignore  .dockerignore  .env.docker  .gitignore  DEVELOPMENT.md  DOCKER.md  Dockerfile  LICENSE  README.md  check.py  docker-compose.yml  env.example  features_aggregate.py  pyproject.toml  recession.py  requirements.txt  run_aggregate_series.py  run_data_collection.py  run_features_pipeline.py  setup_duckdb.py  src_pipeline_refactoring_plan.txt
.cursor/rules/: cursor.rules
.github/workflows/: docker-build.yml
data/: symbols.csv
data/silver/: featured_symbols_metadata.csv
old/: baker.py  clickhouse_functions.py  create_aggregate_series.py  features.py  features_parallel.py  fetchers.py  finra_function.py  finra_scraper.py  init_tables.sql  occ_scraper.py  setup_clickhouse.py  sp500_indices.py  test.py  usda_scraper.py
scripts/: incremental_update.sh  initial_setup.sh  run_aggregate_series.py  run_features_pipeline.py  setup_duckdb.py
sql/: duckdb_init.sql
src_pipeline/: __init__.py  aggregate_series.py  data_collection.py  date_utils.py  duckdb_functions.py  feature_utils.py  fetch_baker.py  fetch_eia.py  fetch_finra.py  fetch_fred.py  fetch_sp500.py  fetch_usda.py  fetch_yahoo.py  interpolate_data.py  unified_pipeline.py  utils.py
src_pipeline/core/: __init__.py  config_manager.py  duckdb_functions.py  symbol_processor.py
src_pipeline/features/: __init__.py
src_pipeline/fetchers/: __init__.py  fetch_occ.py  fetch_sp500.py
src_pipeline/pipelines/: __init__.py  aggregate_series.py  data_collection.py  unified_pipeline.py
